# swip

./: .gitignore  CMakeLists.txt  client.cpp  common.h  common_includes.h  newserver.cpp  server.cpp
ClientDescriptior/: ClientDescriptor.cpp  ClientDescriptor.h
